--- a/qualtrics/config-parser/configuration.json
+++ b/qualtrics/config-parser/configuration.json
@@ -25,7 +25,7 @@
         "parser_group": "Senator",
         "parser_writein_fields": 1,
         "parser_writein_whitelist": ["Ramen"],
-        "parser_candidates_droppedout": ["Salad - Vegan Party"],
+        "parser_candidates_droppedout": ["Salad - Vegan School"],
         "display_order": 1
       }
     }
